--- a/day16 分布式事务&线程池详解/资料/消息代码.md
+++ b/day16 分布式事务&线程池详解/资料/消息代码.md
@@ -136,7 +136,8 @@ public class AnnotationQuartz {
     
     @Scheduled(cron = "0/60 * * * * ?")
     public void processSentMsg() {  
-    	//TODO 定时处理未完成的消息，如果已经几次查找消息都还是处于未完成状态，则很可能消息没有被消费者接收成功，由于消费者有幂等性实现，则可重发消息给mq,记录重发次数，如果达到阈值，则人工介入
+    	//TODO 定时处理未完成的消息，如果已经几次查找消息都还是处于未完成状态，则很可能消息没有被消费者接收成功，
+	//由于消费者有幂等性实现，则可重发消息给mq,记录重发次数，如果达到阈值，则人工介入
         Message msg = MapUtil.get("msg");
         if("sent".equals(msg.getStatus()){
           int count = redisUtil.get("msg:id:retry:");
